# imagetotext

./: .gitignore  .~lock.result.docx#  Cargo.toml  Dockerfile  build.rs  edtormodule.md  env.example  note.md  prevew.md  preview.html  render.yaml  result.docx  result.odt  result_connection.docx  syncmodule.md  uploadmodule.md  uploadpdfprocess.md  usermodule.md
src/: app.rs  index.rs  main.rs
src/config/: database.rs  environment.rs  mod.rs
src/middleware/: mod.rs  user_auth.rs
src/modules/: mod.rs
src/modules/conversion/: controller.rs  crud.rs  mod.rs  model.rs  route.rs  schema.rs
src/modules/editor/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/modules/sync/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/modules/user/: controller.rs  crud.rs  mod.rs  model.rs  route.rs  schema.rs
src/services/: cloudinary.rs  document_converter.rs  email.rs  jwt.rs  mod.rs
