[package]
name = "imagetotext"
version = "0.1.0"
edition = "2024"
default-run = "imagetotext"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
mongodb = { version = "3.2.3", features = ["sync"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
rand = "0.8.5"
futures = "0.3.31"
futures-util = "0.3.31"
dotenvy = "0.15.7"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
tesseract = "0.12.0"
reqwest = { version = "0.12.20", features = ["json"] }
cloudinary = "0.8.1"
base64 = "0.22.1"
